# KPTH

./: .env  .env.example  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  requirements.txt  test_eco.json  test_lit.json
data-capture/: __init__.py  app.py
digital-library/: __init__.py  app.py
docs/: Untitled Diagram.drawio
docs/governance/: CONSENT_AND_REFUSAL.md  DATA_SOVEREIGNTY.md  ETHICS_BOUNDARIES.md
docs/tools/: TOOLS_OVERVIEW.md  digital-library.md  kindearth-ecological-eval.md  kindearth-policy-analyser.md  kindpath-economic-forecasting.md  kindpath-impact-consulting.md  life-field-tool.md  q-audio-suite.md  syntropic-food-tool.md
ecological-tool/: __init__.py  app.py
kindearth/: AGENTS.md  README.md  pyproject.toml
kindearth/data/: kindearth.sqlite3
kindearth/kindearth/: __init__.py  cli.py  config.py
kindearth/kindearth/core/: __init__.py  composer.py  forecasting.py  gates.py  language.py  pillars.py  redflags.py  signals.py
kindearth/kindearth/db/: __init__.py  migrate.py  repo.py  schema.sql
kindearth/kindearth/models/: __init__.py  engagement.py  gate_response.py  memory.py  recommendation.py  redflag.py  signal.py
kindearth/kindearth/templates/: deliverable.md.j2  section_gates.md.j2  section_redflags.md.j2  section_signals.md.j2  section_stakeholders.md.j2
kindearth/kindearth/tests/: test_cli_engagement.py  test_forecasting.py  test_gates_and_forecasting.py  test_repo.py
kindpath-life-field/: AGENTS.md  index.html  package-lock.json  package.json
kindpath-life-field/src/: App.css  App.tsx  index.css
scripts/backup/: create  restore
scripts/dev/: down  up
services/data-capture/: pyproject.toml  requirements.txt
services/data-capture/app/: main.py
services/digital-library/: pyproject.toml  requirements.txt
services/digital-library/app/: main.py
services/ecological-eval/: pyproject.toml  requirements.txt
services/ecological-eval/app/: main.py
services/ecological-eval/templates/: dashboard.html
services/worker/: Dockerfile  kindpath-worker.service  pyproject.toml  requirements.txt
services/worker/app/: worker.py
shared/: backup.py
tests/: test_services.py
