[tool.poetry]
name = "digital-library"
version = "0.1.0"
description = "Digital library service for KindPath"
authors = ["KindPath Foundation"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
meilisearch = "^0.28.3"
cryptography = "^46.0.5"
pydantic = "^2.5.0"
python-multipart = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"